--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,18 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+			<header>
+				<div class="collapse navbar-collapse" id="navGuestbook">
+					<ul class="navbar-nav ml-auto">
+							<li class="nav-item"><a class="nav-link" href="{{path('homepage')}}">Home</a>
+							<li class="nav-item"><a class="nav-link" href="{{path('about')}}">about</a>
+					</ul>
+				</div>
+			</header>
+			<main class="mt-5">
+				<div class="container">
+							{% block body %}{% endblock %}
+					</div>
+			</main>
     </body>
 </html>
