--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -16,5 +16,7 @@
         <li>Your controller at <code><a href="{{ '/home/tim/werk_new/trenings/symfa/project/my_project_name/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/home/tim/werk_new/trenings/symfa/project/my_project_name/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
     </ul>
+
+		<p><img src="/images/under-construction.gif" /></p>
 </div>
 {% endblock %}
