Some changes are added in new CRUDs

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,7 @@
 					<ul class="navbar-nav ml-auto">
 							<li class="nav-item"><a class="nav-link" href="{{path('homepage')}}">Home</a>
 							<li class="nav-item"><a class="nav-link" href="{{path('about')}}">about</a>
+							<li class="nav-item"><a class="nav-link" href="{{path('admin')}}">admin</a>
 					</ul>
 				</div>
 			</header>
